tdf#102511: Fix gobject-introspection annotation syntax

Change-Id: I43a3ee21bd2db9ace809084d3ab888008243c97f